--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "432396520";
+    const serviceWorkerVersion = "3667348322";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="config.js" defer></script>
 </head>
 <body>
   <script>
